<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textHeading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/inputName"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonHeight"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonHeight"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPersonHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/inputHeight"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonWeight"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonWeight"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPersonWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/inputWeight"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonAge"
        app:layout_constraintEnd_toEndOf="@+id/editTextPersonAge"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPersonAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/inputAge"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCalculate"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPersonAge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPersonWeight"
        app:layout_constraintTop_toTopOf="@+id/editTextPersonName" />

    <TextView
        android:id="@+id/textPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/10"
        android:freezesText="true"
        android:textAllCaps="false"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textHeading" />


</androidx.constraintlayout.widget.ConstraintLayout>